Fix bug
Create container had a piece out of the screen due to box sizing issues
(simple fix).

--- a/src/style.css
+++ b/src/style.css
@@ -231,6 +231,7 @@ div#content {
   }
 
   .create-container {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
